Change scrollbar color (fix #66)

--- a/PVEDiscordDark/sass/PVEDiscordDark.sass
+++ b/PVEDiscordDark/sass/PVEDiscordDark.sass
@@ -1,40 +1,40 @@
-@import './_vars.sass';
+@import './_vars.sass'
 
-@import './x/_body.sass';
-@import './x/_form.sass';
-@import './x/_grid.sass';
-@import './x/_box.sass';
-@import './x/_treelist.sass';
-@import './x/_legend.sass';
-@import './x/_panel.sass';
-@import './x/_toolbar.sass';
-@import './x/_btn.sass';
-@import './x/_column.sass';
-@import './x/_tab.sass';
-@import './x/_window.sass';
-@import './x/_viewport.sass';
-@import './x/_menu.sass';
-@import './x/_tree.sass';
-@import './x/_progress.sass';
-@import './x/_tip.sass';
-@import './x/_component.sass';
-@import './x/_autocontainer.sass';
-@import './x/_title.sass';
-@import './x/_mask.sass';
-@import './x/_misc.sass';
-@import './x/_splitter.sass';
-@import './x/_boundlist.sass';
-@import './x/_datepicker.sass';
+@import './x/_body.sass'
+@import './x/_form.sass'
+@import './x/_grid.sass'
+@import './x/_box.sass'
+@import './x/_treelist.sass'
+@import './x/_legend.sass'
+@import './x/_panel.sass'
+@import './x/_toolbar.sass'
+@import './x/_btn.sass'
+@import './x/_column.sass'
+@import './x/_tab.sass'
+@import './x/_window.sass'
+@import './x/_viewport.sass'
+@import './x/_menu.sass'
+@import './x/_tree.sass'
+@import './x/_progress.sass'
+@import './x/_tip.sass'
+@import './x/_component.sass'
+@import './x/_autocontainer.sass'
+@import './x/_title.sass'
+@import './x/_mask.sass'
+@import './x/_misc.sass'
+@import './x/_splitter.sass'
+@import './x/_boundlist.sass'
+@import './x/_datepicker.sass'
 
-@import './proxmox/_pveDc.sass';
-@import './proxmox/_proxmoxRRDChart.sass';
-@import './proxmox/_pveCeph.sass';
+@import './proxmox/_pveDc.sass'
+@import './proxmox/_proxmoxRRDChart.sass'
+@import './proxmox/_pveCeph.sass'
 
-@import './special/_specific.sass';
-@import './special/_icons.sass';
-@import './special/_proxmox.sass';
-@import './special/_borders.sass';
- 
+@import './special/_specific.sass'
+@import './special/_icons.sass'
+@import './special/_proxmox.sass'
+@import './special/_borders.sass'
+
 html
     overflow: scroll
     overflow-x: hidden
@@ -43,8 +43,11 @@ html
     font-weight: 350
 
 ::-webkit-scrollbar
-	width: 0
-	background: transparent
+    width: 0
+    height: 6px
+    background: $light
+    &:hover
+        background: $darker
 
 a
     color: white
